added some notebook work

--- a/nextflow.config
+++ b/nextflow.config
@@ -3,6 +3,7 @@ params {
     // Reads and references
     adapter_fa = "/projectnb/bf528/materials/project-2-chipseq/refs/TruSeq3-SE.fa"
     blacklist = "/projectnb/bf528/materials/project-2-chipseq/refs/hg38-blacklist.v2.bed"
+    refbed = "/projectnb/bf528/materials/project-2-chipseq/refs/hg38_genes.bed"
 
     genome = "/projectnb/bf528/materials/project-2-chipseq/refs/GRCh38.primary_assembly.genome.fa"
     gtf = "/projectnb/bf528/materials/project-2-chipseq/refs/gencode.v45.primary_assembly.annotation.gtf"
